--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "tarjeta_app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "engines": {
-    "node": ">=18"
+  "engines": {                       // <-- ESTE BLOQUE ES CLAVE
+    "node": ">=18.0.0",              // Versión exacta
+    "npm": ">=9.0.0"                 // Puedes especificar npm también
   "scripts": {
     "dev": "vite",
     "build": "vite build",
