Format engines block in package.json

--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "engines": {                       // <-- ESTE BLOQUE ES CLAVE
-    "node": ">=18.0.0",              // Versión exacta
-    "npm": ">=9.0.0"   
-  },// Puedes especificar npm también
+  "engines": {                      
+    "node": ">=18.0.0",             
+    "npm": ">=9.0.0"                 
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
