--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "dev": "vite",
+    "vercel-build": "chmod -R +x node_modules/.bin/ && npm run build",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
